<resources>
    <string name="app_name">Справочник заболеваний</string>
    <string name="item_home">Список заболеваний</string>
    <string name="item_favorites">Избранное</string>
    <string name="item_categories">Разделы</string>
    <string name="item_settings">Настройки</string>
    <string name="item_about">О программе</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disease">заболевание</string>
    <string name="disease_type">тип заболевания</string>
    <string name="disease_types">Типы заболевания</string>
    <string name="brain">Головной мозг</string>
    <string name="types">Разделы</string>
    <string name="about">О программе</string>
    <string name="title_text_view">Справочник заболеваний</string>
    <string name="dark_theme">Темная тема</string>
    <string name="info">Информация</string>
    <string name="reasons">Причины</string>
    <string name="classification">Классификация</string>
    <string name="symptoms">Симптомы</string>
    <string name="diagnostics">Диагностика</string>
    <string name="category">Раздел</string>
    <string name="find">Найти</string>
    <string name="title_app_name">Приложение:\t\n<b>Справочник заболеваний</b></string>
    <string name="title_app_about">В справочнике заболеваний вы найдете свежую и актуальную информацию по самым разным заболеваниям человека.</string>
    <string name="title_app_author">Автор: Ланц Ольга\t\nстудентка МГГТК ВО АГУ группы ИС - 33</string>
    <string name="font_size">Размер шрифта</string>
    <string name="font_family">Шрифт</string>
    <string name="set_button_text">Установить</string>
    <string name="font_size_number">Размер:    </string>
    <string name="text_ok"><b>OK</b></string>
    <string name="zoom_text">Для увеличения масштаба изображения\nразведите пальцы в областе картинки в стороны.</string>
    <string name="reduction_text">Для уменьшения масштаба изображения сведите\nпальцы в областе картинки вместе.</string>

</resources>