<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/itemHome"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/item_home" />

    <item
        android:id="@+id/itemCategories"
        android:icon="@drawable/ic_baseline_format_list_bulleted"
        android:title="@string/types" />

    <item
        android:id="@+id/itemSettings"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/item_settings" />


    <item android:title="">
        <menu>
            <item
                android:id="@+id/itemAbout"
                android:icon="@drawable/ic_baseline_info"
                android:title="@string/item_about" />
        </menu>
    </item>

</menu>