<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiseaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCategory"
            android:text="@string/category"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginVertical="15sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvInfo"
            android:text="@string/info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvClassificationsTitle"
            android:text="@string/classification"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="15sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvClassifications"
            android:text="@string/classification" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTypesTitle"
            android:text="@string/disease_types"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginVertical="15sp"
            android:textAllCaps="true"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTypes"
            android:text="@string/disease_types" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/ivDisease1"
            android:layout_margin="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvReasonsTitle"
            android:text="@string/reasons"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="15sp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvReasons"
            android:text="@string/reasons" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/ivDisease2"
            android:layout_margin="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSymptomsTitle"
            android:text="@string/symptoms"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="15sp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSymptoms"
            android:text="@string/symptoms" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDiagnosticsTitle"
            android:text="@string/diagnostics"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="15sp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDiagnostics"
            android:text="@string/diagnostics" />

    </LinearLayout>

</ScrollView>