<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_med_cross" />

            <TextView
                android:id="@+id/titleAppName"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/title_app_name"
                android:layout_marginBottom="40dp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:padding="10sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/titleAppAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/title_app_about" />

        <TextView
            android:id="@+id/titleAppAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:layout_marginVertical="60dp"
            android:text="@string/title_app_author" />

    </LinearLayout>
</FrameLayout>