<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OptionsFragment">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDarkTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:minHeight="48dp"
        android:text="@string/dark_theme"
        android:textColor="#808080"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="right"
        android:layout_marginEnd="24dp"/>

    <LinearLayout
        android:id="@+id/FontSizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textFontFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_size"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/seekBarFontSize"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:max="2"
            android:minWidth="230dp"
            android:progress="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFontFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_family"
            android:layout_marginEnd="80dp"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinnerFontFamily"
            android:layout_width="230dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
        android:id="@+id/buttonSetOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/set_button_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="14"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="16"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="18"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="20"
            android:textSize="20sp"/>
    </LinearLayout>


</LinearLayout>